chit api chnages
