# src/api/routes/instalment.route.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
-const { create, update, get } = require('../controller/instalment.controller');
+const { create, update, get, deleteInstalment, query } = require('../controller/instalment.controller');
 
 
 /**
@@ -9,6 +9,14 @@ const { create, update, get } = require('../controller/instalment.controller');
 router.get('/:id', async(req, res, next) => {
     const instalment = await get(req.params.id);
     res.status(200).json(instalment);
+});
+
+/**
+ * DELTE request to /instalment/:id
+ */
+router.delete('/:id', async(req, res, next) => {
+    await deleteInstalment(req.params.id);
+    res.status(200).json({});
 });
 
 /**
@@ -25,6 +33,11 @@ router.post("/", async(req, res, next) => {
 router.put("/", async(req, res, next) => {
     const instalment = await update(req.body)
     res.status(201).json(instalment);
+});
+
+router.post("/query", async(req, res, next) => {
+    const instalments = await query(req.body)
+    res.status(201).json(instalments);
 });
 
 module.exports = router;
